--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ chrono = { version = "0.4.19", features = ["serde"] }
 serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0.60"
 curl = "0.4.34"
+plotly = "0.6.0"
+csv = "1.1.5"
